--- a/steam-native-runtime-files/steam-native.desktop
+++ b/steam-native-runtime-files/steam-native.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Steam
+Name=Steam Native
 Comment=Application for managing and playing games on Steam
 Exec=/usr/bin/steam-native %U
 Icon=steam
